--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
-  <script defer src="https://analytics.imivi.dev/script.js" data-website-id="01d71fe3-df58-4797-a2c3-72e39c5138e4">
-  </script>
+  <script defer src="https://analytics.imivi.dev/script.js"></script>
 </body>
 
 </html>
